# puyocore-rs

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cell.rs  field.rs  fieldbit.rs  main.rs  test.rs  tsumo.rs  util.rs
src/libtetris/: README.md
src/puyo-core/: Cargo.toml  README.md
src/puyo-core/.cargo/: config.toml
src/puyo-core/benches/: bench.rs
src/puyo-core/src/: cell.rs  chain.rs  direction.rs  field.rs  fieldbit.rs  lib.rs  m128i.rs  main.rs  test.rs  tsumo.rs  util.rs
