[package]
name = "tuyotuyo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puyo-core = { path = "./src/puyo-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true